# inspect_path

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  dev.txt  magic-numbers-linux.txt
examples/: inspect.rs
src/: lib.rs  main.rs
src/platform/: documents.rs  mod.rs  unix.rs  windows.rs
tests/: mountinfo  notes.txt
