[package]
name = "inspect_path"
version = "0.3.1"
edition = "2024"
description = "Cross-platform inspection of filesystem paths, including local and remote mounts."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Aurora4891/inspect_path"
homepage = "https://github.com/Aurora4891/inspect_path"
readme = "README.md"
keywords   = ["path", "network", "mount", "windows", "linux"]
categories = ["filesystem", "os"]

[[example]]
name = "inspect"
doc-scrape-examples = false

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cfg-if = "1.0.4"
thiserror = "2.0.18"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_NetworkManagement_WNet"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.0", features = ["fs"] }
